crates/nash-report/src/type_/snapshots/nash_report__type___tests__record_access_missing_field_typo.snap
---
source: crates/nash-report/src/type_/tests.rs
description: "module Main exposing (..)\nperson = { name = \"hello\", age = 1 }\nvalue = person.naem\n"
---
nash::type::mismatch

  × Record `person` has no field `naem`.
   ╭─[Main.nash:3:16]
 2 │ person = { name = "hello", age = 1 }
 3 │ value = person.naem
   ·         ───┬── ────
   ·            ╰── record receiver
   ╰────
  help: Did you mean `name`?

        Available fields: { name : Primitive.string
        , age : Primitive.int
        }
