crates/nash-report/src/type_/snapshots/nash_report__type___tests__record_access_on_non_record.snap
---
source: crates/nash-report/src/type_/tests.rs
description: "module Main exposing (..)\nvalue = \"hello\"\nresult = value.name\n"
---
nash::type::mismatch

  × Type mismatch: expected `Primitive.int`, found `Primitive.string`.
   ╭─[Main.nash:3:10]
 2 │ value = "hello"
 3 │ result = value.name
   ·          ──┬── ──┬─
   ·            │     ╰── field used here
   ·            ╰── record receiver
   ╰────
