crates/nash-report/src/type_/snapshots/nash_report__type___tests__record_field_mismatch.snap
---
source: crates/nash-report/src/type_/tests.rs
description: "module Main exposing (..)\ntype alias Person = { name : Primitive.int }\nvalue : Person\nvalue = { name = \"hello\" }\n"
---
nash::type::mismatch

  × Type mismatch: expected `Primitive.int`, found `Primitive.string`.
   ╭─[Main.nash:4:18]
 3 │ value : Person
 4 │ value = { name = "hello" }
   ·                  ───┬───
   ·                     ╰── field `name` of `value`
   ╰────
