crates/nash-report/src/type_/snapshots/nash_report__type___tests__record_update_change_type.snap
---
source: crates/nash-report/src/type_/tests.rs
description: "module Main exposing (..)\nperson = { name = 1 }\nvalue = { person | name = \"hello\" }\n"
---
nash::type::mismatch

  × Type mismatch: expected `Primitive.int`, found `Primitive.string`.
   ╭─[Main.nash:3:27]
 2 │ person = { name = 1 }
 3 │ value = { person | name = "hello" }
   ·                           ───┬───
   ·                              ╰── update of `name`
   ╰────
  help: Rebuild the record to change a field's type.
