crates/nash-report/src/type_/snapshots/nash_report__type___tests__record_update_unknown_field.snap
---
source: crates/nash-report/src/type_/tests.rs
description: "module Main exposing (..)\nperson = { name = \"hello\" }\nvalue = { person | naem = () }\n"
---
nash::type::mismatch

  × Record `person` has no field `naem`.
   ╭─[Main.nash:3:20]
 2 │ person = { name = "hello" }
 3 │ value = { person | naem = () }
   ·                    ────
   ╰────
  help: Did you mean `name`?

        Available fields: { name : Primitive.string
        }
