crates/nash-report/src/type_/snapshots/nash_report__type___tests__rigid_var_mismatch.snap
---
source: crates/nash-report/src/type_/tests.rs
description: "module Main exposing (..)\nf : 'a\nf = 1\n"
---
nash::type::mismatch

  × Type mismatch: expected `'a`, found `Primitive.int`.
   ╭─[Main.nash:3:5]
 1 │ module Main exposing (..)
 2 │ f : 'a
   ·     ─┬
   ·      ╰── declared type
 3 │ f = 1
   ·     ┬
   ·     ╰── body of `f`
   ╰────
  help: Keep the implementation generic over `'a`, or specialize its annotation.
