crates/nash-report/src/type_/snapshots/nash_report__type___tests__source_pipeline_call_argument.snap
---
source: crates/nash-report/src/type_/tests.rs
expression: "type_error_reports(\"module Main exposing (..)\\ntype A = A\\ntype B = B\\nf : A -> A\\nf x = x\\ng = f B\\n\")"
---
  × Type mismatch: expected `A`, found `B`.
   ╭─[Main.nash:6:7]
 5 │ f x = x
 6 │ g = f B
   ·       ┬
   ·       ╰── argument 1 of `f`
   ╰────
