crates/nash-report/src/type_/snapshots/nash_report__type___tests__source_pipeline_call_second_argument.snap
---
source: crates/nash-report/src/type_/tests.rs
description: "module Main exposing (..)\ntype A = A\ntype B = B\nf : A -> A -> A\nf x y = x\ng = f A B\n"
---
nash::type::mismatch

  × Type mismatch: expected `A`, found `B`.
   ╭─[Main.nash:6:9]
 5 │ f x y = x
 6 │ g = f A B
   ·         ┬
   ·         ╰── argument 2 of `f`
   ╰────
