crates/nash-report/src/type_/snapshots/nash_report__type___tests__source_pipeline_if_branches.snap
---
source: crates/nash-report/src/type_/tests.rs
expression: "type_error_reports(\"module Main exposing (..)\\ntype A = A\\ntype B = B\\nf condition = if condition then A else B\\n\")"
---
TYPE MISMATCH

  × The 2nd branch of this `if` does not match all the previous branches:
   ╭─[Main.nash:4:40]
 3 │ type B = B
 4 │ f condition = if condition then A else B
   ·                                        ─
   ╰────
  help: This `B` value is a:

            B

        But all the previous branches result in:

            A

        Hint: All branches in an `if` must produce the same type of values. This way, no
        matter which branch we take, the result is always a consistent shape. Read
        <https://nash-script.dev/hints/custom-types> to learn how to “mix” types.
